# RxSeraph

./: .gitignore  CMakeLists.txt  CMakeMycfg.cmake  CMakeMypkg.cmake  README.md
etc/: Seraph_Note.md
lib/: CMakeLists.txt
lib/Seraph/: CMakeLists.txt
lib/Seraph/src/Seraph/: Dat.cpp  Dat.h  Script.cpp  Script.h  Script_Cryptor.cpp  Script_Cryptor.h  Script_Expression.cpp  Script_Expression.h  Script_Instruction.h  Script_Reader.cpp  Script_Reader.h  Script_Scenario.cpp  Script_Scenario.h  Seraph_Types.h  VFS.cpp  VFS.h
pkg/: CMakeLists.txt
src/: CMakeLists.txt
src/Core/RxSeraph/: Pack.cpp  Pack_Cryptor.cpp  Pack_IndexTable.cpp  Pack_IndexTable.h  Script.cpp  Script_Cryptor.cpp  Script_Expression.cpp  Script_Expression.h  Script_Reader.h  Script_Scenario.cpp  Script_Scenario.h  Seraph_Types.h
src/Dat_Editor/: CMakeLists.txt  main.cpp
src/Hook/RxSeraph/: VFS.cpp
src/Script_Decryptor/: CMakeLists.txt  Script_Decryptor_Filter.json  main.cpp
src/Script_TextEditor/: CMakeLists.txt  main.cpp
src/VFS_Hook/: dllmain.cpp
src/include/RxSeraph/: Pack.h  Pack_Cryptor.h  Pack_IndexTable.h  Script.h  Script_Cryptor.h  Script_Expression.h  Script_Instruction.h  Script_Reader.h  Script_Scenario.h  Seraph_Types.h  VFS.h
src/src/RxSeraph/: Pack.cpp  Pack_Cryptor.cpp  Pack_IndexTable.cpp  Script.cpp  Script_Cryptor.cpp  Script_Expression.cpp  Script_Reader.cpp  Script_Scenario.cpp  VFS.cpp
src/src/RxSeraph/Core/: Pack.cpp  Pack_Cryptor.cpp  Pack_IndexTable.cpp  Script.cpp  Script.h  Script_Cryptor.cpp  Script_Expression.cpp  Script_Expression.h  Script_Reader.cpp  Script_Scenario.cpp  Script_Scenario.h
src/src/RxSeraph/Hook/: VFS.cpp  VFS.h
test/: CMakeLists.txt
test/Dat_Test/: CMakeLists.txt  main.cpp
test/Pack_Test/: CMakeLists.txt  main.cpp
test/Script_Test/: CMakeLists.txt  main.cpp  name_table.json  script_filter.json
test/VFS_Hook/: CMakeLists.txt
test/VFS_Test/: CMakeLists.txt  dllmain.cpp
